unpackaged/main/default/objects/SolicitudTerreno__c/SolicitudTerreno__c.object-meta.xml
<CustomObject>
    <label>Solicitud de Terreno</label>
    <nameField>
        <label>Nombre de Solicitud de Terreno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de Terreno</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>