unpackaged/main/default/objects/SolicitudTerreno__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UEN 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>UEN 3 &amp; 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>