unpackaged/main/default/objects/SolicitudTerreno__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>