unpackaged/main/default/objects/SolicitudTerreno__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <label>Beneficiario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>