unpackaged/main/default/objects/SolicitudTerreno__c/fields/Clabe__c.field-meta.xml
<CustomField>
    <fullName>Clabe__c</fullName>
    <label>CLABE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>