unpackaged/main/default/objects/SolicitudTerreno__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CASAS JAVER SA DE CV</fullName>
            </value>
            <value>
                <fullName>HOGARES JAVER SA DE CV</fullName>
            </value>
            <value>
                <fullName>CASAS JAVER DE QUERETARO SA DE CV</fullName>
            </value>
            <value>
                <fullName>CASAS JAVER DE MEXICO SA DE CV</fullName>
            </value>
            <value>
                <fullName>INMUEBLES PARA TI SA DE CV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>