unpackaged/main/default/objects/SolicitudTerreno__c/fields/CompraConvenio__c.field-meta.xml
<CustomField>
    <fullName>CompraConvenio__c</fullName>
    <label>Compra/Convenio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>