unpackaged/main/default/objects/SolicitudTerreno__c/fields/Debe__c.field-meta.xml
<CustomField>
    <fullName>Debe__c</fullName>
    <label>Debe</label>
    <length>15</length>
    <type>Text</type>
</CustomField>