unpackaged/main/default/objects/SolicitudTerreno__c/fields/Dueno__c.field-meta.xml
<CustomField>
    <fullName>Dueno__c</fullName>
    <label>Dueño</label>
    <length>100</length>
    <type>Text</type>
</CustomField>