unpackaged/main/default/objects/SolicitudTerreno__c/fields/EsquemadePagos__c.field-meta.xml
<CustomField>
    <fullName>EsquemadePagos__c</fullName>
    <label>Esquema de Pagos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>