unpackaged/main/default/objects/SolicitudTerreno__c/fields/EstadodeSolicitud__c.field-meta.xml
<CustomField>
    <fullName>EstadodeSolicitud__c</fullName>
    <label>Estado de Solicitud</label>
    <length>50</length>
    <type>Text</type>
</CustomField>