unpackaged/main/default/objects/SolicitudTerreno__c/fields/Haber__c.field-meta.xml
<CustomField>
    <fullName>Haber__c</fullName>
    <label>Haber</label>
    <length>15</length>
    <type>Text</type>
</CustomField>