unpackaged/main/default/objects/SolicitudTerreno__c/fields/M2__c.field-meta.xml
<CustomField>
    <fullName>M2__c</fullName>
    <label>m2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>