unpackaged/main/default/objects/SolicitudTerreno__c/fields/MargenBrutoTotal__c.field-meta.xml
<CustomField>
    <fullName>MargenBrutoTotal__c</fullName>
    <label>Margen Bruto Total</label>
    <length>15</length>
    <type>Text</type>
</CustomField>