unpackaged/main/default/objects/SolicitudTerreno__c/fields/NoCuenta__c.field-meta.xml
<CustomField>
    <fullName>NoCuenta__c</fullName>
    <label>No. Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>