unpackaged/main/default/objects/SolicitudTerreno__c/fields/NoFactura__c.field-meta.xml
<CustomField>
    <fullName>NoFactura__c</fullName>
    <label>No. Factura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>