unpackaged/main/default/objects/SolicitudTerreno__c/fields/NombreDeDocumento__c.field-meta.xml
<CustomField>
    <fullName>NombreDeDocumento__c</fullName>
    <externalId>true</externalId>
    <label>Nombre (Id Externo)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>