unpackaged/main/default/objects/SolicitudTerreno__c/fields/NomSubcuenta__c.field-meta.xml
<CustomField>
    <fullName>NomSubcuenta__c</fullName>
    <label>Nom. Subcuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>