unpackaged/main/default/objects/SolicitudTerreno__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <label>Plaza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A0-NL 1</fullName>
            </value>
            <value>
                <fullName>B0-NL 2</fullName>
            </value>
            <value>
                <fullName>C0-Jalisco</fullName>
            </value>
            <value>
                <fullName>D0-MEXICO</fullName>
            </value>
            <value>
                <fullName>E0-QUERETARO</fullName>
            </value>
            <value>
                <fullName>F0-AGUASCALIENTES</fullName>
            </value>
            <value>
                <fullName>G0-REYNOSA</fullName>
            </value>
            <value>
                <fullName>H0-CANCUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>