unpackaged/main/default/objects/SolicitudTerreno__c/fields/PrecioporM2__c.field-meta.xml
<CustomField>
    <fullName>PrecioporM2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>$ / m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>