unpackaged/main/default/objects/SolicitudTerreno__c/fields/PrecioVenta__c.field-meta.xml
<CustomField>
    <fullName>PrecioVenta__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>