unpackaged/main/default/objects/SolicitudTerreno__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presupuesto</label>
    <type>Checkbox</type>
</CustomField>