unpackaged/main/default/objects/SolicitudTerreno__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <label>Solicitante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>