unpackaged/main/default/objects/SolicitudTerreno__c/fields/StatusInternoAprobacion__c.field-meta.xml
<CustomField>
    <fullName>StatusInternoAprobacion__c</fullName>
    <description>El campo se actualizara cuando se Apruebe/Rechace una solicitud desde SalesForce.</description>
    <label>Status Interno Aprobacion</label>
    <length>15</length>
    <type>Text</type>
</CustomField>