unpackaged/main/default/objects/SolicitudTerreno__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>