unpackaged/main/default/objects/SolicitudTerreno__c/fields/SuperficieTotal__c.field-meta.xml
<CustomField>
    <fullName>SuperficieTotal__c</fullName>
    <label>Superficie Total</label>
    <length>15</length>
    <type>Text</type>
</CustomField>