unpackaged/main/default/objects/SolicitudTerreno__c/fields/SuperficieUtilizable__c.field-meta.xml
<CustomField>
    <fullName>SuperficieUtilizable__c</fullName>
    <label>Superficie Utilizable</label>
    <length>15</length>
    <type>Text</type>
</CustomField>