unpackaged/main/default/objects/SolicitudTerreno__c/fields/Terreno__c.field-meta.xml
<CustomField>
    <fullName>Terreno__c</fullName>
    <label>Terreno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>