unpackaged/main/default/objects/SolicitudTerreno__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adquisición</fullName>
            </value>
            <value>
                <fullName>Anticipos a Terrenos</fullName>
            </value>
            <value>
                <fullName>Pagos Parciales a Terrenos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>