unpackaged/main/default/objects/SolicitudTerreno__c/fields/TIR__c.field-meta.xml
<CustomField>
    <fullName>TIR__c</fullName>
    <label>TIR</label>
    <length>15</length>
    <type>Text</type>
</CustomField>