unpackaged/main/default/objects/SolicitudTerreno__c/fields/TotalNoViviendas__c.field-meta.xml
<CustomField>
    <fullName>TotalNoViviendas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No. Viviendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>