unpackaged/main/default/objects/SolicitudTerreno__c/fields/TotalPV__c.field-meta.xml
<CustomField>
    <fullName>TotalPV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total P.V.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>