unpackaged/main/default/objects/SolicitudTerreno__c/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <label>Ubicación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>