unpackaged/main/default/objects/SolicitudTerreno__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <label>UEN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dirección de Negocios Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios Estado de México</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios Jalisco</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios MTY1</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios MTY2</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios Queretaro</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Dirección de Negocios Reynosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>