unpackaged/main/default/objects/SolicitudTerreno__c/fields/ValordeOperacion__c.field-meta.xml
<CustomField>
    <fullName>ValordeOperacion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor de Operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>