unpackaged/main/default/objects/SolicitudTerreno__c/recordTypes/Adquisiciones.recordType-meta.xml
<RecordType>
    <fullName>Adquisiciones</fullName>
    <active>true</active>
    <label>Adquisiciones</label>
</RecordType>