unpackaged/main/default/objects/SolicitudTerreno__c/recordTypes/AnteriorPagos.recordType-meta.xml
<RecordType>
    <fullName>AnteriorPagos</fullName>
    <active>true</active>
    <label>Anterior - Pagos</label>
</RecordType>