unpackaged/main/default/objects/SolicitudTerreno__c/recordTypes/Pagos.recordType-meta.xml
<RecordType>
    <fullName>Pagos</fullName>
    <active>true</active>
    <description>Tipo de registro para anticipos a terrenos, pagos a terrenos, honorarios y pagos a fideicomisos.</description>
    <label>Pagos</label>
</RecordType>